# ty-django-issue

./: main.py  pyproject.toml
webserver/: main.py  pyproject.toml
webserver/mysite/: pyproject.toml
webserver/mysite/app2/: views.py
webserver/mysite/mysite/: settings.py  urls.py
