[project]
name = "mysite"
version = "0.1.0"
description = ""
authors = [
    {name = "Raymond Gasper",email = "raymondgasper@fastmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ty (>=0.0.1a23,<0.0.2)",
    "python-lsp-server (>=1.13.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
